--- a/.github/workflows/deploy-environments.yml
+++ b/.github/workflows/deploy-environments.yml
@@ -13,10 +13,9 @@ on:
       environment:
         description: 'Target environment'
         required: true
-        default: 'local'
+        default: 'development'
         type: choice
         options:
-          - local
           - development
           - staging
           - production
@@ -172,13 +171,16 @@ jobs:
   # ============================================
   # Development Environment Deployment  
   # ============================================
-  deploy-local:
-    name: 🏠 Deploy to Local Machine
+  deploy-development:
+    name: 🏠 Deploy to Development (Local)
     runs-on: self-hosted
     needs: [determine-strategy]
-    if: needs.determine-strategy.outputs.environment == 'local'
-    environment:
-      name: local
+    if: |
+      always() && 
+      needs.determine-strategy.outputs.environment == 'development' &&
+      (needs.pre-deployment-checks.result == 'success' || needs.pre-deployment-checks.result == 'skipped')
+    environment: 
+      name: development
       url: http://localhost:8080
 
     steps:
@@ -199,71 +201,6 @@ jobs:
           # Health check
           curl -f http://localhost:8080/actuator/health
           echo "✅ Local environment is healthy."
-
-  deploy-development:
-    name: 🔧 Deploy to Development
-    runs-on: ubuntu-latest
-    needs: [determine-strategy, pre-deployment-checks]
-    if: |
-      always() && 
-      needs.determine-strategy.outputs.environment == 'development' &&
-      (needs.pre-deployment-checks.result == 'success' || needs.pre-deployment-checks.result == 'skipped')
-    environment: 
-      name: development
-      url: https://dev.guardianes-de-gaia.com
-    
-    steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v4
-      
-      - name: 🔐 Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-        continue-on-error: true
-      
-      - name: 🚀 Deploy to Development ECS
-        env:
-          IMAGE_TAG: ${{ needs.determine-strategy.outputs.image-tag }}
-        run: |
-          echo "🚀 Deploying to Development environment..."
-          
-          # Update ECS service with new image
-          aws ecs update-service || echo "AWS ECS deployment skipped - credentials not available" \
-            --cluster guardianes-dev-cluster \
-            --service guardianes-backend-dev \
-            --force-new-deployment \
-            --task-definition guardianes-backend-dev:$(aws ecs describe-task-definition \
-              --task-definition guardianes-backend-dev \
-              --query 'taskDefinition.revision' \
-              --output text)
-          
-          echo "✅ Development deployment initiated"
-      
-      - name: ⏳ Wait for deployment
-        run: |
-          echo "⏳ Waiting for deployment to complete..."
-          
-          # Wait for ECS service to stabilize
-          aws ecs wait services-stable || echo "AWS ECS wait skipped - credentials not available" \
-            --cluster guardianes-dev-cluster \
-            --services guardianes-backend-dev
-          
-          echo "✅ Development deployment completed"
-      
-      - name: 🧪 Post-deployment validation
-        run: |
-          echo "🧪 Running post-deployment validation..."
-          
-          # Health check
-          timeout 300 bash -c 'until curl -f https://dev.guardianes-de-gaia.com/actuator/health; do sleep 10; done'
-          
-          # Basic API tests
-          curl -f https://dev.guardianes-de-gaia.com/actuator/info
-          
-          echo "✅ Development environment is healthy"
 
   # ============================================
   # Staging Environment Deployment
