fix: Enhance security scan to exclude empty password values in Helm templates
- Updated regex to exclude empty password fields
- Maintains security while allowing disabled Grafana service
- Resolves security scan false positive for grafana-admin-password field

--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -115,8 +115,8 @@ jobs:
         run: |
           echo "🔐 Scanning generated manifests for security issues..."
           
-          # Check for hardcoded secrets (exclude base64 encoded test values and secret references)
-          if grep -r "password.*:" ./generated-dev/ ./generated-prod/ | grep -v "passwordRef\|secretKeyRef\|dGVzdA==\|ZGV2X2dyYWZhbmFfYWRtaW4="; then
+          # Check for hardcoded secrets (exclude base64 encoded test values, secret references, and empty values)
+          if grep -r "password.*:" ./generated-dev/ ./generated-prod/ | grep -v "passwordRef\|secretKeyRef\|dGVzdA==\|ZGV2X2dyYWZhbmVfYWRtaW4=\|password:\s*$\|password:\s*\"\"\s*$"; then
             echo "❌ Found potential hardcoded passwords"
             exit 1
           fi
