fix: Improve security scan regex to handle Grafana admin password pattern
- Changed to extended regex (-E) for better pattern matching
- Added specific exclusion for grafana-admin-password base64 pattern
- Maintains security while allowing legitimate test passwords
- Resolves security scan false positive for development Grafana configuration

--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -116,7 +116,7 @@ jobs:
           echo "🔐 Scanning generated manifests for security issues..."
           
           # Check for hardcoded secrets (exclude base64 encoded test values, secret references, and empty values)
-          if grep -r "password.*:" ./generated-dev/ ./generated-prod/ | grep -v "passwordRef\|secretKeyRef\|dGVzdA==\|ZGV2X2dyYWZhbmVfYWRtaW4=\|password:\s*$\|password:\s*\"\"\s*$"; then
+          if grep -r "password.*:" ./generated-dev/ ./generated-prod/ | grep -v -E "(passwordRef|secretKeyRef|dGVzdA==|password:\s*$|password:\s*\"\"\s*$|grafana-admin-password:\s*ZGV2X2dyYWZhbmVfYWRtaW4=)"; then
             echo "❌ Found potential hardcoded passwords"
             exit 1
           fi
