fix: Use flexible regex pattern for Grafana password exclusion
- Changed to extended regex with wildcard matching
- Pattern now matches any spacing/formatting between field and value
- Uses 'grafana-admin-password:.*ZGV2X2dyYWZhbmVfYWRtaW4=' pattern
- Should handle any YAML formatting variations robustly

--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -126,7 +126,7 @@ jobs:
           echo "After basic exclusions:"
           echo "$FILTERED_PASSWORDS"
           
-          SUSPICIOUS_PASSWORDS=$(echo "$FILTERED_PASSWORDS" | grep -v "  grafana-admin-password: ZGV2X2dyYWZhbmVfYWRtaW4=" || true)
+          SUSPICIOUS_PASSWORDS=$(echo "$FILTERED_PASSWORDS" | grep -v -E "grafana-admin-password:.*ZGV2X2dyYWZhbmVfYWRtaW4=" || true)
           echo "After Grafana exclusion:"
           echo "$SUSPICIOUS_PASSWORDS"
           
