fix: Use chained individual grep exclusions for security scan
- Replace complex regex with simple chained grep -v commands
- Each exclusion is a separate grep command for maximum reliability
- Store result in variable with '|| true' to handle empty results
- Should finally resolve the persistent Grafana password detection issue

--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -117,8 +117,10 @@ jobs:
           
           # Check for hardcoded secrets (exclude test values, secret references, and empty values)
           # Allow known test passwords: dGVzdA== (test) and ZGV2X2dyYWZhbmVfYWRtaW4= (dev_grafana_admin)
-          if grep -r "password.*:" ./generated-dev/ ./generated-prod/ | grep -v "passwordRef\|secretKeyRef\|dGVzdA==\|ZGV2X2dyYWZhbmVfYWRtaW4=" | grep -v "password:\s*$\|password:\s*\"\"\s*$"; then
-            echo "❌ Found potential hardcoded passwords (excluding known test values)"
+          FOUND_PASSWORDS=$(grep -r "password.*:" ./generated-dev/ ./generated-prod/ | grep -v "passwordRef" | grep -v "secretKeyRef" | grep -v "dGVzdA==" | grep -v "ZGV2X2dyYWZhbmVfYWRtaW4=" | grep -v "password:\s*$" | grep -v "password:\s*\"\"\s*$" || true)
+          if [ -n "$FOUND_PASSWORDS" ]; then
+            echo "❌ Found potential hardcoded passwords (excluding known test values):"
+            echo "$FOUND_PASSWORDS"
             exit 1
           fi
           
