fix: Resolve Grafana password security scan issue at the source
- Modified Helm secret template to only generate grafana-admin-password when both enabled AND password is set
- This prevents empty/test passwords from appearing in generated manifests
- Reverted security scan to simpler form without complex Grafana exclusions
- Fixes the root cause rather than working around the symptom

--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -46,7 +46,7 @@ data:
   # JWT Secret
   jwt-secret: {{ randAlphaNum 32 | b64enc }}
   
-  # Grafana admin password
-  {{- if .Values.monitoring.grafana.enabled }}
+  # Grafana admin password (only if enabled and password is set)
+  {{- if and .Values.monitoring.grafana.enabled .Values.monitoring.grafana.adminPassword }}
   grafana-admin-password: {{ .Values.monitoring.grafana.adminPassword | b64enc }}
   {{- end }}
