--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -44,7 +44,7 @@ on:
 
 env:
   HELM_VERSION: "3.13.0"
-  KUBECTL_VERSION: "1.28.0"
+  KUBECTL_VERSION: "latest"
 
 jobs:
   # ============================================
