--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -44,3 +44,7 @@ spring.security.user.roles=ADMIN
 logging.level.com.guardianes=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
+
+# JWT Configuration
+guardianes.jwt.secret=dev_environment_secret_key_for_testing_purposes_only_minimum_256_bits_long
+guardianes.jwt.expiration=86400
