--- a/.github/workflows/security-quality-gates.yml
+++ b/.github/workflows/security-quality-gates.yml
@@ -75,7 +75,7 @@ jobs:
           fi
       
       - name: 🔍 SonarQube Quality Gate
-        if: secrets.SONAR_TOKEN
+        if: ${{ secrets.SONAR_TOKEN != '' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -89,7 +89,7 @@ jobs:
             -Dsonar.qualitygate.wait=true
       
       - name: 📊 SonarQube Skip Message
-        if: ${{ !secrets.SONAR_TOKEN }}
+        if: ${{ secrets.SONAR_TOKEN == '' }}
         run: |
           echo "⚠️ SonarQube analysis skipped - no token provided"
       
@@ -255,7 +255,7 @@ jobs:
           path: backend/target/dependency-check-report.html
       
       - name: 🔍 Snyk vulnerability scan
-        if: secrets.SNYK_TOKEN
+        if: ${{ secrets.SNYK_TOKEN != '' }}
         uses: snyk/actions/maven@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -264,7 +264,7 @@ jobs:
         continue-on-error: true
       
       - name: 📤 Upload Snyk results
-        if: always() && secrets.SNYK_TOKEN
+        if: ${{ always() && secrets.SNYK_TOKEN != '' }}
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
@@ -289,7 +289,7 @@ jobs:
           cache: maven
       
       - name: 🔍 License scan with FOSSA
-        if: secrets.FOSSA_API_KEY
+        if: ${{ secrets.FOSSA_API_KEY != '' }}
         uses: fossas/fossa-action@main
         with:
           api-key: ${{ secrets.FOSSA_API_KEY }}
@@ -514,7 +514,7 @@ jobs:
             });
       
       - name: 🚨 Notify security team on critical issues
-        if: failure() && secrets.SLACK_WEBHOOK_SECURITY && (github.ref == 'refs/heads/main' || github.event_name == 'schedule')
+        if: ${{ failure() && secrets.SLACK_WEBHOOK_SECURITY != '' && (github.ref == 'refs/heads/main' || github.event_name == 'schedule') }}
         uses: 8398a7/action-slack@v3
         with:
           status: failure
