--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -12,3 +12,7 @@ spring.security.user.roles=USER
 # Logging
 logging.level.com.guardianes=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+# JWT Configuration
+guardianes.jwt.secret=local_dev_secret_key_for_testing_purposes_only_minimum_256_bits_long
+guardianes.jwt.expiration=86400
