fix: Add JWT secret to test profile

--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -3,6 +3,8 @@ spring.application.name=guardianes-backend-test
 
 # Enable JWT and JPA components for integration tests
 guardianes.jwt.enabled=true
+guardianes.jwt.secret=test_secret_key_for_unit_testing_purposes_only_minimum_256_bits_long
+guardianes.jwt.expiration=86400
 guardianes.jpa.enabled=true
 
 # Only exclude problematic auto-configurations for unit tests (not JPA/DataSource)
