fix: Add pre-deployment-checks to deploy-development needs array

--- a/.github/workflows/deploy-environments.yml
+++ b/.github/workflows/deploy-environments.yml
@@ -232,7 +232,7 @@ jobs:
   deploy-development:
     name: 🏠 Deploy to Development (Local)
     runs-on: self-hosted
-    needs: [determine-strategy]
+    needs: [determine-strategy, pre-deployment-checks]
     if: |
       always() && 
       needs.determine-strategy.outputs.environment == 'development' &&
