fix(mobile): fix register_page_test using proper BLoC mocking

--- a/.github/workflows/mobile-ci.yml
+++ b/.github/workflows/mobile-ci.yml
@@ -174,13 +174,13 @@ jobs:
             if [ -n "$COVERAGE" ]; then
               COVERAGE_INT=$(echo "$COVERAGE" | cut -d. -f1)
               echo "" >> $GITHUB_STEP_SUMMARY
-              if [ "$COVERAGE_INT" -lt 35 ]; then
-                echo "❌ **Coverage ${COVERAGE}% is below 35% threshold**" >> $GITHUB_STEP_SUMMARY
-                echo "❌ FAILED: Coverage ${COVERAGE}% is below 35% threshold"
+              if [ "$COVERAGE_INT" -lt 70 ]; then
+                echo "❌ **Coverage ${COVERAGE}% is below 70% threshold**" >> $GITHUB_STEP_SUMMARY
+                echo "❌ FAILED: Coverage ${COVERAGE}% is below 70% threshold"
                 exit 1
               else
-                echo "✅ **Coverage ${COVERAGE}% meets 35% threshold**" >> $GITHUB_STEP_SUMMARY
-                echo "✅ Coverage ${COVERAGE}% meets 35% threshold"
+                echo "✅ **Coverage ${COVERAGE}% meets 70% threshold**" >> $GITHUB_STEP_SUMMARY
+                echo "✅ Coverage ${COVERAGE}% meets 70% threshold"
               fi
             else
               echo "⚠️ Could not parse coverage - skipping threshold check"
@@ -952,7 +952,10 @@ jobs:
             adb devices
             
             echo "📱 Running Flutter integration tests..."
-            cd mobile/guardianes_mobile && flutter test integration_test/ --reporter expanded
+            cd mobile/guardianes_mobile
+            
+            # Run all integration tests
+            flutter test integration_test/ --reporter expanded
             
             echo "✅ Integration tests completed"
       
