--- a/mobile/guardianes_mobile/pubspec.yaml
+++ b/mobile/guardianes_mobile/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   build_runner: ^2.4.7
   json_serializable: ^6.7.1
   mockito: ^5.4.4
+  mocktail: ^1.0.1
   bloc_test: ^9.1.5
 
 flutter:
