--- a/.github/workflows/api-smoke-tests.yml
+++ b/.github/workflows/api-smoke-tests.yml
@@ -36,8 +36,54 @@ jobs:
       (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     
     steps:
+      - name: 🧹 Ultimate Workspace Cleanup
+        run: |
+          # Kill any Docker containers that might be holding files
+          docker ps -q | xargs -r docker kill || true
+          docker ps -aq | xargs -r docker rm -f || true
+          
+          # Use Docker container with root privileges to clean ALL root-owned files in the workspace
+          echo "🧹 Using Docker to clean all root-owned files in workspace..."
+          docker run --rm -v /datos_nvme/run0/actions-runner/_work/guardianes-de-gaia:/workspace alpine:latest \
+            sh -c "chown -R $(id -u):$(id -g) /workspace 2>/dev/null || chmod -R 777 /workspace 2>/dev/null || true"
+          
+          # Clean specific directories known to have root-owned files
+          echo "🧹 Cleaning docker/ directory with root-owned configs..."
+          docker run --rm -v /datos_nvme/run0/actions-runner/_work/guardianes-de-gaia:/workspace alpine:latest \
+            sh -c "rm -rf /workspace/guardianes-de-gaia/docker 2>/dev/null || true; \
+                   find /workspace -name 'target' -type d -exec rm -rf {} + 2>/dev/null || true; \
+                   find /workspace -type d -name 'redis' -exec rm -rf {} + 2>/dev/null || true; \
+                   find /workspace -type d -name 'grafana' -exec rm -rf {} + 2>/dev/null || true"
+          
+          # Additional cleanup with direct commands
+          if [ -d "${{ github.workspace }}/backend/target" ]; then
+            echo "🗑️ Removing Maven target directory..."
+            rm -rf ${{ github.workspace }}/backend/target || \
+            docker run --rm -v ${{ github.workspace }}:/workspace alpine:latest \
+              sh -c "rm -rf /workspace/backend/target" || true
+          fi
+          
+          # Clean docker directories that cause permission errors
+          echo "🗑️ Removing problematic docker directories..."
+          rm -rf ${{ github.workspace }}/docker/redis 2>/dev/null || \
+          docker run --rm -v ${{ github.workspace }}:/workspace alpine:latest \
+            sh -c "rm -rf /workspace/docker/redis" || true
+          rm -rf ${{ github.workspace }}/docker/grafana 2>/dev/null || \
+          docker run --rm -v ${{ github.workspace }}:/workspace alpine:latest \
+            sh -c "rm -rf /workspace/docker/grafana" || true
+          
+          # Reset git repository state if it exists
+          cd ${{ github.workspace }} 2>/dev/null && git reset --hard HEAD 2>/dev/null || true
+          cd ${{ github.workspace }} 2>/dev/null && git clean -fdx 2>/dev/null || true
+          
+          # Ensure proper ownership of workspace
+          chown -R run0:run0 ${{ github.workspace }} 2>/dev/null || \
+          chown -R $(whoami):$(whoami) ${{ github.workspace }} 2>/dev/null || true
+      
       - name: 📥 Checkout code
         uses: actions/checkout@v4
+        with:
+          clean: false
       
       - name: 🔍 Test Backend Health
         run: |
