--- a/.github/workflows/deploy-environments.yml
+++ b/.github/workflows/deploy-environments.yml
@@ -53,9 +53,21 @@ jobs:
     
     steps:
       - name: 🧹 Cleanup Workspace
-        uses: ./.github/actions/cleanup-workspace
-        with:
-          kill-containers: 'true'
+        run: |
+          # Kill only guardianes containers (not all containers)
+          docker ps -q --filter "name=guardianes" | xargs -r docker kill || true
+          docker ps -aq --filter "name=guardianes" | xargs -r docker rm -f || true
+          
+          # Fix file permissions
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "chown -R $(id -u):$(id -g) /workspace 2>/dev/null || true"
+          
+          # Clean docker config directories
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "rm -rf /workspace/docker/redis /workspace/docker/grafana 2>/dev/null || true"
+          
+          # Reset git state if exists
+          cd "${{ github.workspace }}" && git reset --hard HEAD 2>/dev/null || true
       
       - name: 📥 Checkout code
         uses: actions/checkout@v4
@@ -150,9 +162,21 @@ jobs:
     
     steps:
       - name: 🧹 Cleanup Workspace
-        uses: ./.github/actions/cleanup-workspace
-        with:
-          kill-containers: 'true'
+        run: |
+          # Kill only guardianes containers (not all containers)
+          docker ps -q --filter "name=guardianes" | xargs -r docker kill || true
+          docker ps -aq --filter "name=guardianes" | xargs -r docker rm -f || true
+          
+          # Fix file permissions
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "chown -R $(id -u):$(id -g) /workspace 2>/dev/null || true"
+          
+          # Clean docker config directories
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "rm -rf /workspace/docker/redis /workspace/docker/grafana 2>/dev/null || true"
+          
+          # Reset git state if exists
+          cd "${{ github.workspace }}" && git reset --hard HEAD 2>/dev/null || true
       
       - name: 📥 Checkout code
         uses: actions/checkout@v4
@@ -224,9 +248,21 @@ jobs:
 
     steps:
       - name: 🧹 Cleanup Workspace
-        uses: ./.github/actions/cleanup-workspace
-        with:
-          kill-containers: 'true'
+        run: |
+          # Kill only guardianes containers (not all containers)
+          docker ps -q --filter "name=guardianes" | xargs -r docker kill || true
+          docker ps -aq --filter "name=guardianes" | xargs -r docker rm -f || true
+          
+          # Fix file permissions
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "chown -R $(id -u):$(id -g) /workspace 2>/dev/null || true"
+          
+          # Clean docker config directories
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "rm -rf /workspace/docker/redis /workspace/docker/grafana 2>/dev/null || true"
+          
+          # Reset git state if exists
+          cd "${{ github.workspace }}" && git reset --hard HEAD 2>/dev/null || true
       
       - name: 📥 Checkout code
         uses: actions/checkout@v4
@@ -343,9 +379,21 @@ jobs:
     
     steps:
       - name: 🧹 Cleanup Workspace
-        uses: ./.github/actions/cleanup-workspace
-        with:
-          kill-containers: 'true'
+        run: |
+          # Kill only guardianes containers (not all containers)
+          docker ps -q --filter "name=guardianes" | xargs -r docker kill || true
+          docker ps -aq --filter "name=guardianes" | xargs -r docker rm -f || true
+          
+          # Fix file permissions
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "chown -R $(id -u):$(id -g) /workspace 2>/dev/null || true"
+          
+          # Clean docker config directories
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "rm -rf /workspace/docker/redis /workspace/docker/grafana 2>/dev/null || true"
+          
+          # Reset git state if exists
+          cd "${{ github.workspace }}" && git reset --hard HEAD 2>/dev/null || true
       
       - name: 📥 Checkout code
         uses: actions/checkout@v4
@@ -438,9 +486,21 @@ jobs:
     
     steps:
       - name: 🧹 Cleanup Workspace
-        uses: ./.github/actions/cleanup-workspace
-        with:
-          kill-containers: 'true'
+        run: |
+          # Kill only guardianes containers (not all containers)
+          docker ps -q --filter "name=guardianes" | xargs -r docker kill || true
+          docker ps -aq --filter "name=guardianes" | xargs -r docker rm -f || true
+          
+          # Fix file permissions
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "chown -R $(id -u):$(id -g) /workspace 2>/dev/null || true"
+          
+          # Clean docker config directories
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "rm -rf /workspace/docker/redis /workspace/docker/grafana 2>/dev/null || true"
+          
+          # Reset git state if exists
+          cd "${{ github.workspace }}" && git reset --hard HEAD 2>/dev/null || true
       
       - name: 📥 Checkout code
         uses: actions/checkout@v4
@@ -577,9 +637,21 @@ jobs:
     
     steps:
       - name: 🧹 Cleanup Workspace
-        uses: ./.github/actions/cleanup-workspace
-        with:
-          kill-containers: 'true'
+        run: |
+          # Kill only guardianes containers (not all containers)
+          docker ps -q --filter "name=guardianes" | xargs -r docker kill || true
+          docker ps -aq --filter "name=guardianes" | xargs -r docker rm -f || true
+          
+          # Fix file permissions
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "chown -R $(id -u):$(id -g) /workspace 2>/dev/null || true"
+          
+          # Clean docker config directories
+          docker run --rm --user root -v "${{ github.workspace }}:/workspace" alpine:latest \
+            sh -c "rm -rf /workspace/docker/redis /workspace/docker/grafana 2>/dev/null || true"
+          
+          # Reset git state if exists
+          cd "${{ github.workspace }}" && git reset --hard HEAD 2>/dev/null || true
       
       - name: 📥 Checkout code
         uses: actions/checkout@v4
